[package]
name = "nwm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nwm"
path = "src/nwm/main.rs"

[[bin]]
name = "nwm-gui-log"
path = "src/nwlog/main.rs"

[dependencies]
env_logger = "0.11.8"
log = "0.4.29"
once_cell = "1.21.3"
platform-dirs = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
x11rb = "0.13.2" 
