[package]
name = "nwm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nwm"
path = "src/nwm/main.rs"

[[bin]]
name = "nwlog"
path = "src/nwlog/main.rs"

[dependencies]
colored = "3.1.1"
env_logger = "0.11.8"
log = "0.4.29"
mlua = { version = "0.11.5", features = ["lua54", "vendored"] }
nix = { version = "0.30.1", features = ["process"] }
once_cell = "1.21.3"
platform-dirs = "0.3.0"
x11rb = "0.13.2" 
